fix a declared type inference bug